Correct replicas yml

--- a/orchestration-workshop-2/docker-compose.yml
+++ b/orchestration-workshop-2/docker-compose.yml
@@ -7,7 +7,8 @@ services:
       - 8000:8000
     links:
       - redis
-    replicas: 4
+    deploy:
+      replicas: 4
   redis:
     image: redis:alpine
 
