Make replicated image

--- a/orchestration-workshop-4/docker-compose.2.yml
+++ b/orchestration-workshop-4/docker-compose.2.yml
@@ -5,7 +5,8 @@ services:
     networks:
        - overlay
     deploy:
-      replicas: 1
+      mode: replicated
+      replicas: 2
 
 networks:
   overlay:
