update with gitlab based container

--- a/orchestration-workshop-6/nginx.yaml
+++ b/orchestration-workshop-6/nginx.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   type: LoadBalancer
   ports:
-  - port: 8001
+  - port: 80
   selector:
     app: nginx
 ---
@@ -29,6 +29,6 @@ spec:
     spec:
       containers:
       - name: nginx
-        image: nginx:1.7.9
+        image: nginx:latest
         ports:
         - containerPort: 80
