--- a/orchestration-workshop-4/docker-compose.2.yml
+++ b/orchestration-workshop-4/docker-compose.2.yml
@@ -1,12 +1,13 @@
 version: "3.7"
 services:
-  mongodb:
-    image: mongodb
-    networks:
-       - overlay
+  app:
+    image: registry.gitlab.com/willhallonline/stackdemo:latest # docker service create --name registry --publish published=5000,target=5000 registry:2
+    ports:
+      - 8023:8000
+    links:
+      - redis
     deploy:
       mode: replicated
       replicas: 2
-
-networks:
-  overlay:
+  redis:
+    image: redis:alpine
