--- a/orchestration-workshop-6/nginx.yaml
+++ b/orchestration-workshop-6/nginx.yaml
@@ -1,34 +1,25 @@
 apiVersion: v1
+kind: Pod
+metadata:
+  name: nginx
+  labels:
+    app: web
+spec:
+  containers:
+  - name: nginx
+    image: registry.hub.docker.com/library/nginx:1.15
+    ports:
+    - containerPort: 80
+---
+apiVersion: v1
 kind: Service
 metadata:
-  name: my-nginx-svc
-  labels:
-    app: nginx
+  name: web
 spec:
-  type: LoadBalancer
+  selector:
+    app: web
   ports:
-  - port: 80
-  selector:
-    app: nginx
----
-apiVersion: apps/v1
-kind: Deployment
-metadata:
-  name: my-nginx
-  labels:
-    app: nginx
-spec:
-  replicas: 3
-  selector:
-    matchLabels:
-      app: nginx
-  template:
-    metadata:
-      labels:
-        app: nginx
-    spec:
-      containers:
-      - name: nginx
-        image: nginx:latest
-        ports:
-        - containerPort: 80
+  - protocol: TCP
+    port: 80
+    targetPort: 80
+
