--- a/orchestration-workshop-7/docker-compose.yml
+++ b/orchestration-workshop-7/docker-compose.yml
@@ -1,8 +1,7 @@
 version: '3'
 services:
   app:
-    image: gitlab.com/willhallonline/stackdemo:latest # docker service create --name registry --publish published=5000,target=5000 registry:2
-    build: .
+    image: registry.gitlab.com/willhallonline/stackdemo:latest
     ports:
       - 8000:8000
     links:
@@ -12,6 +11,3 @@ services:
       replicas: 2
   redis:
     image: redis:alpine
-
-# docker-compose push
-# docker stack deploy --compose-file docker-compose.yml stackdemo
